--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NatLeaf | Clínica Psiquiátrica — Saúde mental com acolhimento</title>
+    <title>Clínica Volpi | Saúde mental com acolhimento — Dra. Camila Volpi</title>
   </head>
   <body>
     <div id="root"></div>
